    should properly resolve the template/magic word.
  * If a namespace is not case-sensitive (user, template, category) then the
    associated comments namespace should not be case-sensitive either.
  * Interwiki links should not be rel="nofollow".
  * Links of the form "[[Help : Test]]" should link to the "Help:Test" page
    but output "Help : Test" as the link text, as per Mediawiki.
  * Wiki pre syntax (" pre <span>HTML</span") should allow HTML, although
    HTML pre ("<pre>pre <span>HTML</span></pre>") should not.
  * Return the resized image URL when images of the form
    "[[Image:Example.jpg|200px]]" are used.
  * Fix issues where image transparency was lost after resizing.

Translation Updates:

  * Updated German translations (axelclk).


0.8.4
=====

Bugfixes:

  * Wiki tables placed after lists were being incorrectly indented.  Reported
    by Rudi Wiesmayr.
  * Fix incorrect parsing when inline tags (such as wiki bold) are left
    unclosed before or after list tags.  Reported by Rudi Wiesmayr.
  * Parsing of the <references /> tag produced an unclosed ordered list.
    Reported by Rudi Wiesmayr and an anonymous user.
  * Fix potential XSS attack with URLs of the form Special:Login?message=XSS.
    Reported by frafu.
  * Fix the manual upgrade steps for MS SQL in the UPGRADE.txt document.
    Reported by Angel.
  * Very large values for max upload file size could result in
    NumberFormatException being thrown on the Special:Admin page.


0.8.3
=====

Bugfixes:

  * When renaming a topic, the data could be incorrectly stored in the database
    if the new topic name included an underscore or a plus sign.  Test case
    provided by Rudi Wiesmayr.
  * Links to a virtual wiki page with the same page name ("[[:test:PageName]]")
    will now parse correctly again.  Reported by Tom Schueller.
  * Update the default footer page's copyright notice to 2010.

Translation Updates:

  * Updated Chinese translations (hfl).