@@ -1,1 +1,1 @@
-<p><a class="externallink" rel="nofollow" title="XSS4" href="http://jamwiki.org/wiki/en/Special:Print?topic=Bug_Reports%3C/title%3E%3Cscript%3Ealert(%27Ownage%27);%3C/script%3E">XSS4</a></p>
+<p><a class="externallink" rel="nofollow" href="http://jamwiki.org/wiki/en/Special:Print?topic=Bug_Reports%3C/title%3E%3Cscript%3Ealert(%27Ownage%27);%3C/script%3E">XSS4</a></p>
