@@ -1,7 +1,7 @@
 <p><br />
 a_b_40%25_x_y</p>
 <p><br /></p>
-<p><a class="externallink" rel="nofollow" title="http://example.com/wiki/en/Test_Topic" href="http://example.com/wiki/en/Test_Topic">http://example.com/wiki/en/Test_Topic</a></p>
+<p><a class="externallink" rel="nofollow" href="http://example.com/wiki/en/Test_Topic">http://example.com/wiki/en/Test_Topic</a></p>
 <p>/wiki/en/Test_Topic</p>
 <p>a_b+40%25+x+y</p>
 <p>abcde fg</p>
